Plausicheck bei leerem Betragsfeld