@@ -98,6 +98,10 @@ public class BuchungImpl extends AbstractDBObject implements Buchung
     {
       throw new ApplicationException("Bitte Datum eingeben");
     }
+    if (getStringBetrag() == null)
+    {
+      throw new ApplicationException("Bitte Betrag eingeben");
+    }
     Calendar cal1 = Calendar.getInstance();
     cal1.setTime(getDatum());
     Calendar cal2 = Calendar.getInstance();
@@ -198,7 +202,7 @@ public class BuchungImpl extends AbstractDBObject implements Buchung
     }
     if (o instanceof Integer)
     {
-      l = new Long((Integer) o);
+      l = Long.valueOf(((Integer) o).longValue());
     }
     if (l == null)
     {
@@ -215,7 +219,7 @@ public class BuchungImpl extends AbstractDBObject implements Buchung
     {
       throw new RemoteException("Konto fehlt!");
     }
-    setAttribute("konto", new Long(konto.getID()));
+    setAttribute("konto", Long.valueOf(konto.getID()));
   }
 
   @Override
@@ -278,9 +282,30 @@ public class BuchungImpl extends AbstractDBObject implements Buchung
   @Override
   public void setBetrag(double d) throws RemoteException
   {
-    setAttribute("betrag", new Double(d));
+    setAttribute("betrag", Double.valueOf(d));
   }
 
+  private String getStringBetrag() throws RemoteException
+  {
+    Double d = (Double) getAttribute("betrag");
+    if (d == null)
+      return null;
+    return d.toString();
+  }
+
+  @Override
+  public void setStringBetrag(String betrag) throws RemoteException
+  {
+    if (betrag == null)
+    {
+      setAttribute("betrag", null);
+    }
+    else
+    {
+      setAttribute("betrag", Double.parseDouble(betrag));
+    }
+  }
+  
   @Override
   public String getZweck() throws RemoteException
   {
@@ -381,7 +406,7 @@ public class BuchungImpl extends AbstractDBObject implements Buchung
   public void setAbrechnungslauf(Abrechnungslauf abrechnungslauf)
       throws RemoteException
   {
-    setAttribute("abrechnungslauf", new Long(abrechnungslauf.getID()));
+    setAttribute("abrechnungslauf", Long.valueOf(abrechnungslauf.getID()));
   }
 
   @Override
@@ -408,7 +433,7 @@ public class BuchungImpl extends AbstractDBObject implements Buchung
   {
     if (mitgliedskonto != null)
     {
-      setAttribute("mitgliedskonto", new Long(mitgliedskonto.getID()));
+      setAttribute("mitgliedskonto", Long.valueOf(mitgliedskonto.getID()));
     }
     else
     {
@@ -439,7 +464,7 @@ public class BuchungImpl extends AbstractDBObject implements Buchung
   {
     if (projekt != null)
     {
-      setAttribute("projekt", new Long(projekt.getID()));
+      setAttribute("projekt", Long.valueOf(projekt.getID()));
     }
     else
     {
@@ -570,7 +595,7 @@ public class BuchungImpl extends AbstractDBObject implements Buchung
     {
       try
       {
-        return new Long(getID());
+        return Long.valueOf(getID());
       }
       catch (Exception e)
       {
